# eopl3

./: README.md
05-ch3/: ex3.6.md  ex3.7.md  ex3.8.md  ex3.9.md
05-ch3/interpreters/XLET/: grammar.ebnf  xlet.cabal
05-ch3/interpreters/XLET/src/XLet/: AST.hs  Env.hs  Interpreter.hs  List.hs  Parser.hs
05-ch3/interpreters/XLET/tests/Test/: Interpreter.hs
ch1/: ex1.15.rkt  ex1.17.rkt  ex1.26.rkt  occurs-free.rkt
ch2/: ex2.1.rkt  ex2.10.rkt  ex2.11.rkt  ex2.3.rkt  ex2.5.rkt  ex2.6.rkt  ex2.7.rkt  ex2.8.rkt  ex2.9.rkt
ch3/PROC/: env.rkt  interpreter.rkt  interpreter.test.rkt  parser.test.rkt
ch3/PROC-3.26/: interpreter.rkt  set.rkt
ch3/PROC-3.28/: interpreter.rkt  interpreter.test.rkt
exercises/B/: exB-1.rkt  exB-3.rkt  exB-4.rkt  exB-5.rkt
exercises/ch1/: ex1-13.rkt  ex1-15.rkt  ex1-16.rkt  ex1-17.rkt  ex1-18.rkt  ex1-19.rkt  ex1-20.rkt  ex1-21.rkt  ex1-22.rkt  ex1-23.rkt  ex1-24.rkt  ex1-25.rkt  ex1-26.rkt  ex1-27.rkt  ex1-28.rkt  ex1-29.rkt  ex1-30.rkt  ex1-31.rkt  ex1-32.rkt  ex1-33.rkt  ex1-34.rkt  ex1-35.rkt  ex1-36.rkt  ex1-6.rkt  ex1-7.rkt
exercises/ch2/: ex2-1.rkt  ex2-10.rkt  ex2-11.hs  ex2-12-1.hs  ex2-12-2.hs  ex2-12.rkt  ex2-13-to-2-14.hs  ex2-15.rkt  ex2-16.rkt  ex2-17a.rkt  ex2-18.rkt  ex2-2.md  ex2-21.rkt  ex2-22.rkt  ex2-30.rkt  ex2-4.md  ex2-5.hs  ex2-5.rkt  ex2-8-to-ex2-10.hs  ex2-8.rkt  ex2-9.rkt
notes/: foreword.md  preface.md
notes/ch4/implicit-refs/: grammar.ebnf  implicit-refs.cabal
notes/ch4/implicit-refs/src/: AST.hs  Interpreter.hs  Parser.hs  Store.hs
notes/ch4/implicit-refs/tests/Test/: Interpreter.hs
(+53 files in other folders)
