name: implicit-refs
version: 0.1.0.0
build-type: Simple
cabal-version: >=1.10

library
  default-language: Haskell2010
  hs-source-dirs: src

  exposed-modules:
    Interpreter

  other-modules:
    AST
    Env
    Parser
    Store

  build-depends:
    base >= 4.7 && < 5,
    parsec

test-suite implicit-refs-tests
  default-language: Haskell2010
  hs-source-dirs: tests

  type: exitcode-stdio-1.0
  main-is: Main.hs

  other-modules:
    Test.Interpreter

  build-depends:
    base >= 4.7 && < 5,
    hspec,
    implicit-refs
